v1.94:
- MathExpression:
  - builtin function sgn() returns now "1" for input "0"
  - unary minus and plus can be used anywhere in the expression, not only at the beginning,
    that's why "a=-2" will work now

v1.95:
- namespace ds:
  - class BitMatrix
- MemPointer:
  - added operator!()

v1.96:
- PropertyReader:
  - added sections
  - classname PropertyReader::iterator changed to PropertyReader::properties_iterator
  - new method update() : substitute for modify()
  - method modify() deprecated
- MathExpression:
  - constructor mathexpression throws additionaly a SubException<MathExpression::DefinitionError,MathExpression> 

v1.97:
- MathExpression:
  - changed method-signature:
    The methods "print" and "toString" expect a parameter defining the display-precision of post decimals.
  - if the upper bound of a Sum or a Prod is less then the startvalue 0 is returned

v1.98:
- Graphable:
  - find_scc() got the optional parameter construct_scc_graph. If set to true, find_scc() will construct the scc-graph (which is a dag)
    besides determining the components. The return-value of find_scc() has been changed to SCCGraph * .
  - for this purpose two new classes have been designed:
	SCCGraph and SCCGraphComponent
- BitMatrix:
  - two functions added: toString() and show()

- MathExpression:
  - added static function builtinsToString()

- renamed Exception_T to ExceptionBase

v1.99:
- ExceptionBase:
  - removed methods getMsgCharPtr() and getIdMsgCharPtr()

- MathExpression:
  - more sophisticated error-output
  - added class ParserException, removed SubExcepion<SyntaxErr,MathExpression> and SubException<DefinitionError,MathExpression>

v2.0:
- Buffer<T>:
  - changed methodnames:
    blocks() -> getBlocks()
    elements() -> getElements()
  - returntype of merge() changed from MemPointer<T> to T * .
  - added function get()